ADEN-7737 Fixed 'z-Index'

--- a/src/ad-products/styles/_twitch.scss
+++ b/src/ad-products/styles/_twitch.scss
@@ -1,12 +1,12 @@
 .twitch-player-right {
-  z-Index: 1;
+  z-index: 1;
   position: absolute;
   top: 0;
   right: 0;
 }
 
 .twitch-player-left {
-  z-Index: 1;
+  z-index: 1;
   position: absolute;
   top: 0;
   left: 0;
